load raw data without nworkers done

--- a/Project_2_-_Handout.ipynb
+++ b/Project_2_-_Handout.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,35 +316,54 @@
     "            \n",
     "    return lines_sanitized, label\n",
     "\n",
+    "# packing only the loading part in a function, for convenience with Pool\n",
+    "def _load_data(file_paths):\n",
+    "    out = [None] * len(file_paths)\n",
+    "    for i, f in tqdm(enumerate(file_paths)):\n",
+    "        lines, label = file_load_kernel(f)\n",
+    "        out[i] = (lines, label)\n",
+    "    return out\n",
     "\n",
-    "def load_data(data_path, mode='train', nworkers=10):\n",
-    "    '''Returns each data sample as a tuple (x, y), x = sequence of strings (i.e., syscalls), y = malware program class'''\n",
+    "def load_data(data_path, mode='train', nworkers=10, load_only=-1):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "        data_path (string): root path containing the dataset\n",
+    "        mode (string): can be ['train', 'test']\n",
+    "        nworkers (int/string) : number of cores to use.\n",
+    "        load_only (int): number of samples to load (for debugging reasons), use -1 to load all.\n",
+    "    \n",
+    "    Returns:\n",
+    "        raw_data_samples (tuple): (x, y ) where\n",
+    "            x = sequence of strings (i.e., syscalls)\n",
+    "            y = malware program class\n",
+    "    \"\"\"\n",
     "    raw_data_samples = []\n",
     "    file_names = []\n",
     "    frequency_dict = {}\n",
     "    for c in CLASSES: frequency_dict[c] = 0;\n",
     "    \n",
     "    # get all file paths\n",
-    "    for dirpath, _, fnames in os.walk(data_path + '/' + mode + '/'):\n",
+    "    file_paths = []\n",
+    "    for dirpath, _, fnames in os.walk(os.path.join(data_path, mode)):\n",
+    "        fnames = [os.path.join(dirpath, f) for f in fnames]\n",
+    "        file_paths.extend(fnames)\n",
     "        \n",
-    "        file_names = fnames\n",
-    "        break\n",
-    "        \n",
-    "    for i, f in tqdm(enumerate(file_names,0)):\n",
-    "        \n",
-    "        lines, label = file_load_kernel( os.path.join(dirpath, f) )\n",
-    "        raw_data_samples.append((lines,label))\n",
-    "        \n",
-    "        frequency_dict[label] = frequency_dict[label] + 1\n",
-    "        \n",
-    "        if i == 100: break\n",
-    "            \n",
-    "    return raw_data_samples, frequency_dict"
+    "    # limit the load_only file names for debugging purposes.\n",
+    "    if load_only > 0: file_paths = file_paths[:load_only]\n",
+    "    \n",
+    "    # TODO: implement nworkers functionality.\n",
+    "    # divide the list into chunks for each worker.\n",
+    "    #     file_paths_chunks = np.array_split(file_paths, nworkers)\n",
+    "    #     p = Pool(nworkers)\n",
+    "    #     raw_data_samples = p.map(_load_data, file_paths_chunks)\n",
+    "    \n",
+    "    raw_data_samples = _load_data(file_paths)\n",
+    "    return raw_data_samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -353,7 +372,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "19it [00:00, 155.22it/s]"
+      "5it [00:00, 44.58it/s]"
      ]
     },
     {
@@ -367,100 +386,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "77it [00:00, 114.64it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Agent': 2, 'Allaple': 4, 'AutoIt': 5, 'Basun': 12, 'NothingFound': 24, 'Patched': 7, 'Swizzor': 6, 'Texel': 31, 'VB': 3, 'Virut': 7}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "1000it [00:10, 94.78it/s]\n"
      ]
     }
    ],
    "source": [
     "print('=> Loading training data ... ')\n",
-    "train_raw_samples, freq = load_data('./data', mode='train')\n",
-    "print(freq)"
+    "train_raw_samples = load_data('./data', mode='train', load_only=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(['02 01  00000000 0000066a 00007000',\n",
-       "  '02 02  00006b2c 047c8042 000b9000',\n",
-       "  '02 02  00006b2c 047c8042 00108000',\n",
-       "  '02 02  00006b2c 047c8042 00058000',\n",
-       "  '02 02  00006b2c 047f58fd 00037000',\n",
-       "  '02 02  00006b2c 047c8042 000aa000',\n",
-       "  '02 02  00006b2c 047c8042 00092000',\n",
-       "  '02 02  00006b2c 047c8042 00011000',\n",
-       "  '02 02  00006b2c 047c8042 0013d000',\n",
-       "  '02 02  00006b2c 047c8042 00049000',\n",
-       "  '02 02  00006b2c 047c8042 00091000',\n",
-       "  '02 02  00006b2c 047c8042 0008b000',\n",
-       "  '02 02  00006b2c 047c8042 00008000',\n",
-       "  '02 02  00006b2c 047c8042 0001d000',\n",
-       "  '02 02  00006b2c 047c8042 0000d000',\n",
-       "  '02 02  00006b2c 047c8042 00011000',\n",
-       "  '0a 01  01e16041 000000 01 00000000 00000000',\n",
-       "  '02 02  00000000 0000066a 00000000',\n",
-       "  '02 02  00006b2c 047c8042 002d9000',\n",
-       "  '0a 04  034abaf3 00000000 0000066a'],\n",
-       " 'Patched')"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_raw_samples[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "76it [00:00, 110.96it/s]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=> # Train samples =  101\n",
-      "=> # Test  samples =  101\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "=> # Train samples =  500\n",
+      "=> # Test  samples =  500\n"
      ]
     }
    ],
    "source": [
-    "project_mode = 'traintest'    # trainval, traintest, debug\n",
+    "project_mode = 'debug'    # trainval, traintest, debug\n",
     "np.random.seed(123)          # To perform the same split across multiple runs\n",
     "\n",
     "if project_mode == 'trainval':\n",
