fix training epoch function, and add weights functionality

--- a/Project_2_-_Handout.ipynb
+++ b/Project_2_-_Handout.ipynb
@@ -127,7 +127,7 @@
     "# Some suggestions of our libraries that might be helpful for this project\n",
     "from collections import Counter          # an even easier way to count\n",
     "from multiprocessing import Pool         # for multiprocessing\n",
-    "from tqdm import tqdm                    # fancy progress bars\n",
+    "from tqdm import tqdm_notebook as tqdm                    # fancy progress bars\n",
     "\n",
     "# Load other libraries here.\n",
     "# Keep it minimal! We should be easily able to reproduce your code.\n",
@@ -181,7 +181,10 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "# train examples (Should be 13682) :13682\n# test  examples (Should be 10000) : 10000\n"
+     "text": [
+      "# train examples (Should be 13682) : 13682\n",
+      "# test  examples (Should be 10000) : 10000\n"
+     ]
     }
    ],
    "source": [
@@ -299,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,13 +363,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
-     "text": "0it [00:00, ?it/s]=> Loading training data ... \n1000it [00:52, 18.97it/s]\n"
+     "text": [
+      "=> Loading training data ... \n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "20131380b2694aee93fe9ab916ee877c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -376,13 +402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "=> # Train samples =  500\n=> # Test  samples =  500\n"
+     "text": [
+      "=> # Train samples =  500\n",
+      "=> # Test  samples =  0\n"
+     ]
     }
    ],
    "source": [
@@ -425,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,10 +522,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#\n",
@@ -508,10 +535,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def vectorize_raw_samples(raw_samples, nworkers=10):\n",
@@ -526,12 +551,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=> Processing: Train\n",
+      "\n",
+      "=> Processing: Test\n"
+     ]
+    }
+   ],
    "source": [
     "print('=> Processing: Train')\n",
     "train_data = vectorize_raw_samples(train_raw_samples)\n",
@@ -542,10 +576,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#\n",
@@ -582,21 +614,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Feel free to edit anything in this block\n",
+    "# WARNING: THIS CLASSES LIST IS COPIED FROM MLW_LOADER.\n",
+    "CLASSES = [\"NothingFound\", \"Basun\", \"Agent\", \"Allaple\", \"AutoIt\", \n",
+    "           \"Patched\", \"Swizzor\", \"Texel\", \"VB\", \"Virut\"]\n",
+    "\n",
     "\n",
     "def evaluate_preds(y_gt, y_pred):\n",
     "    pass\n",
-    "\n",
-    "\n",
-    "def another_helper(question):\n",
-    "    return 42\n",
-    "\n",
     "\n",
     "def save_model(model, out_path):\n",
     "    pass\n",
@@ -604,21 +632,103 @@
     "\n",
     "def save_data(eval_data, out_path):\n",
     "    with open(out_path, 'wb') as wf:\n",
-    "        pickle.dump(eval_data, out_path)"
+    "        pickle.dump(eval_data, out_path)\n",
+    "        \n",
+    "def find_class_occurences(dir_path='./data/train'):\n",
+    "    \"\"\"\n",
+    "    Returns a dictionary with having class name as key, and the number of instances\n",
+    "    having the class as its corresponding key.\n",
+    "    \n",
+    "    Args:\n",
+    "        dir_path (string): folder containing programs' stack trace.\n",
+    "    \n",
+    "    Returns:\n",
+    "        out (dict): (k,v) pairs where k = class name, v = number of occurences of that class.\n",
+    "    \"\"\"\n",
+    "    out = dict()\n",
+    "    for program_file in tqdm(os.listdir(dir_path)):\n",
+    "        class_name = program_file.split('.')[-1]\n",
+    "        out[class_name] = out.get(class_name, 0) + 1\n",
+    "    return out\n",
+    "        \n",
+    "def get_class_weights(occ):\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    # finding total number of examples in the set.\n",
+    "    total = 0.0\n",
+    "    for _, v in occ.items():\n",
+    "        total += v\n",
+    "    \n",
+    "    out = np.zeros((len(CLASSES), ))\n",
+    "    for k, v in occ.items():\n",
+    "        weight = 1. / (occ[k] / total)\n",
+    "        out[CLASSES.index(k)] = weight\n",
+    "    \n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "698ff7cee47b47f59626bff691a4f097",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=13682), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_occ = find_class_occurences(dir_path='./data/train')\n",
+    "weights = get_class_weights(class_occ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Basun': 2053, 'NothingFound': 3475, 'Texel': 3408, 'VB': 767, 'Swizzor': 609, 'Virut': 1193, 'Patched': 481, 'Agent': 454, 'AutoIt': 718, 'Allaple': 524}\n",
+      "[ 3.93726619  6.66439357 30.13656388 26.11068702 19.05571031 28.44490644\n",
+      " 22.46633826  4.01467136 17.83833116 11.46856664]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(class_occ)\n",
+    "print(weights)"
    ]
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## 2.a.1 Define Dataset and Transformation to use."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,24 +775,6 @@
     "\n",
     "# please see models.py file for models definition\n",
     "import anns # this file contains the defintion for FCNs/ANNs."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(34, 10)"
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "num_feats, num_classes"
    ]
   },
   {
@@ -694,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,56 +829,95 @@
     "# Optimizer\n",
     "optimizer = optim.Adam(model.parameters(), lr=lr)\n",
     "\n",
-    "# Data Loaders\n",
-    "# trainloader = DataLoader(trainset, batch_size=batch_size, shuffle=True)\n",
-    "# testloader = DataLoader(testset, batch_size=batch_size, shuffle=False)\n",
-    "\n",
-    "# Etc."
+    "# loss function\n",
+    "criterion = nn.CrossEntropyLoss()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
-    "#\n",
-    "# ------- Your Code -------\n",
-    "#\n",
-    "# Example:\n",
-    "# for epoch in range(n_epochs):\n",
-    "#     ... train ...\n",
-    "#     ... validate ...\n",
+    "import pdb\n",
     "\n",
-    "def train_epoch(loader, model, criterion, optimizer, device, curr_epoch, n_epochs):\n",
+    "def train_epoch(loader, model, criterion, optimizer, device, curr_epoch, n_epochs, print_every=10):\n",
     "    \"\"\"Trains the model for one epoch\"\"\"\n",
     "\n",
     "    print(\"Epoch [{} / {}]\".format(curr_epoch, n_epochs))\n",
     "    loader_iterable = tqdm(loader)\n",
     "\n",
-    "    for (X_batch, Y_batch) in loader_iterable:\n",
+    "    for i, sample in enumerate(loader_iterable):\n",
+    "        X_batch, Y_batch = sample['trace'], sample['label_idx']\n",
     "        X_batch, Y_batch = X_batch.to(device), Y_batch.to(device)\n",
-    "        \n",
     "        Y_pred = model(X_batch)\n",
     "        loss = criterion(Y_pred, Y_batch)\n",
+    "        \n",
+    "        if (i % print_every) == 0:\n",
+    "            print(\"Loss at iteration {}: {}\".format(i, loss))\n",
     "        \n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        curr_global_iter += 1\n",
-    "\n",
     "    # TODO: solve the verbosity issue.\n",
-    "    return curr_global_iter, curr_epoch < n_epochs"
+    "    return curr_epoch < n_epochs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [0 / 25]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c1911f2ccde348acb9d321981d58cc7c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=428), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss at iteration 0: 36.20546340942383\n",
+      "Loss at iteration 10: 4.6983819007873535\n",
+      "Loss at iteration 20: 2.6383464336395264\n",
+      "Loss at iteration 30: 1.9768108129501343\n",
+      "Loss at iteration 40: 1.7611181735992432\n",
+      "Loss at iteration 50: 1.7293657064437866\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Internal Python error in the inspect module.\n",
+      "Below is the traceback from this internal error.\n",
+      "\n",
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_epoch(train_loader, model, criterion, optimizer, device, 0, n_epochs)"
+   ]
   },
   {
    "cell_type": "markdown",
