verify training model

--- a/Project_2_-_Handout.ipynb
+++ b/Project_2_-_Handout.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,6 +653,14 @@
     "        \n",
     "def get_class_weights(occ):\n",
     "    \"\"\"\n",
+    "    Given class occurences dictionary, it returns a numpy array containing the respective\n",
+    "    weight for each class.\n",
+    "    \n",
+    "    Args:\n",
+    "        occ (dict): (k,v) pairs where k = class name, v = number of occurences of that class.\n",
+    "        \n",
+    "    Returns:\n",
+    "        out (np.array) = an array of shape (num_classes,) containing the weight of each class.\n",
     "    \"\"\"\n",
     "    # finding total number of examples in the set.\n",
     "    total = 0.0\n",
@@ -669,13 +677,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "698ff7cee47b47f59626bff691a4f097",
+       "model_id": "c78de631916f425cbadb42dd920e6a98",
        "version_major": 2,
        "version_minor": 0
       },
@@ -696,27 +704,7 @@
    ],
    "source": [
     "class_occ = find_class_occurences(dir_path='./data/train')\n",
-    "weights = get_class_weights(class_occ)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Basun': 2053, 'NothingFound': 3475, 'Texel': 3408, 'VB': 767, 'Swizzor': 609, 'Virut': 1193, 'Patched': 481, 'Agent': 454, 'AutoIt': 718, 'Allaple': 524}\n",
-      "[ 3.93726619  6.66439357 30.13656388 26.11068702 19.05571031 28.44490644\n",
-      " 22.46633826  4.01467136 17.83833116 11.46856664]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(class_occ)\n",
-    "print(weights)"
+    "class_weights = get_class_weights(class_occ)"
    ]
   },
   {
@@ -728,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +786,7 @@
     "# Optimization\n",
     "n_epochs = 25\n",
     "batch_size = 32\n",
-    "lr = 1e-2\n",
+    "lr = 5e-3\n",
     "momentum = 0.9\n",
     "num_workers = 4\n"
    ]
@@ -812,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,19 +811,39 @@
     "# TODO: add test loader functionality\n",
     "\n",
     "model = anns.ANN(input_dim=num_feats, hidden_layers=hidden_layers,\n",
-    "                 output_dim=num_feats).to(device)\n",
+    "                 output_dim=num_classes).to(device)\n",
     "model.train()\n",
     "\n",
     "# Optimizer\n",
     "optimizer = optim.Adam(model.parameters(), lr=lr)\n",
     "\n",
     "# loss function\n",
-    "criterion = nn.CrossEntropyLoss()"
+    "criterion = nn.CrossEntropyLoss(weight=torch.Tensor(class_weights))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.Tensor(class_weights).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,6 +859,7 @@
     "        X_batch, Y_batch = sample['trace'], sample['label_idx']\n",
     "        X_batch, Y_batch = X_batch.to(device), Y_batch.to(device)\n",
     "        Y_pred = model(X_batch)\n",
+    "        # print(Y_pred.shape)\n",
     "        loss = criterion(Y_pred, Y_batch)\n",
     "        \n",
     "        if (i % print_every) == 0:\n",
@@ -866,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +888,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1911f2ccde348acb9d321981d58cc7c",
+       "model_id": "04b2d3ad52584efcbf84db208c9059e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -894,24 +903,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss at iteration 0: 36.20546340942383\n",
-      "Loss at iteration 10: 4.6983819007873535\n",
-      "Loss at iteration 20: 2.6383464336395264\n",
-      "Loss at iteration 30: 1.9768108129501343\n",
-      "Loss at iteration 40: 1.7611181735992432\n",
-      "Loss at iteration 50: 1.7293657064437866\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n",
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+      "Loss at iteration 0: 9.790451049804688\n",
+      "Loss at iteration 10: 2.9664254188537598\n",
+      "Loss at iteration 20: 1.6813374757766724\n",
+      "Loss at iteration 30: 1.8177263736724854\n",
+      "Loss at iteration 40: 1.5098119974136353\n",
+      "Loss at iteration 50: 1.7084524631500244\n",
+      "Loss at iteration 60: 1.2866840362548828\n",
+      "Loss at iteration 70: 1.4582889080047607\n",
+      "Loss at iteration 80: 1.50954270362854\n"
      ]
     }
    ],
