--- a/Project_2_-_Handout.ipynb
+++ b/Project_2_-_Handout.ipynb
@@ -181,10 +181,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "# train examples (Should be 13682) : 13682\n",
-      "# test  examples (Should be 10000) : 10000\n"
-     ]
+     "text": "# train examples (Should be 13682) :13682\n# test  examples (Should be 10000) :10000\n"
     }
    ],
    "source": [
@@ -302,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,36 +360,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "=> Loading training data ... \n"
-     ]
+     "text": "=> Loading training data ... \n\n"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20131380b2694aee93fe9ab916ee877c",
+       "model_id": "f13e71f0fb4f4b4b94ada0a2bb1e9207",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
-      ]
+      "text/plain": "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -402,16 +388,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "=> # Train samples =  500\n",
-      "=> # Test  samples =  0\n"
-     ]
+     "text": "=> # Train samples =  500\n=> # Test  samples =  500\n"
     }
    ],
    "source": [
@@ -454,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,19 +660,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c78de631916f425cbadb42dd920e6a98",
+       "model_id": "6730943ff1c64dd3b345e5f5d499d410",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=13682), HTML(value='')))"
-      ]
+      "text/plain": "HBox(children=(IntProgress(value=0, max=13682), HTML(value='')))"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -697,9 +678,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "\n"
-     ]
+     "text": "\n"
     }
    ],
    "source": [
@@ -716,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,12 +704,13 @@
     "import malware_transforms as mlw_transforms\n",
     "\n",
     "vectorizer = mlw_transforms.CategoryCount()\n",
-    "train_dataset = mlw_loader.MalwareDataset(root_dir='./data', dataset_type='train', transform=vectorizer)"
+    "train_dataset = mlw_loader.MalwareDataset(root_dir='./data', dataset_type='train', transform=vectorizer)\n",
+    "test_dataset = mlw_loader.MalwareDataset(root_dir='./data', dataset_type='test', transform=vectorizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,19 +780,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Feel free to edit anything in this block\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=num_workers)\n",
-    "test_loader = None\n",
-    "# test_loader = DataLoader(test_loader, batch_size=batch_size*2, shuffle=False, num_workers=num_workers)\n",
-    "# TODO: add test loader functionality\n",
+    "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False, num_workers=num_workers)\n",
     "\n",
     "model = anns.ANN(input_dim=num_feats, hidden_layers=hidden_layers,\n",
     "                 output_dim=num_classes).to(device)\n",
-    "model.train()\n",
     "\n",
     "# Optimizer\n",
     "optimizer = optim.Adam(model.parameters(), lr=lr)\n",
@@ -823,44 +800,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([10])"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "torch.Tensor(class_weights).shape"
+    "# TODO BLOCK\n",
+    "# [DONE] add proper logging into list or dictionary or something\n",
+    "# add saving learning curves and model checkpoints."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pdb\n",
-    "\n",
-    "def train_epoch(loader, model, criterion, optimizer, device, curr_epoch, n_epochs, print_every=10):\n",
+    "def train_epoch(loader, model, criterion, optimizer, device, print_every=10):\n",
     "    \"\"\"Trains the model for one epoch\"\"\"\n",
-    "\n",
+    "    model.train()\n",
     "    print(\"Epoch [{} / {}]\".format(curr_epoch, n_epochs))\n",
     "    loader_iterable = tqdm(loader)\n",
+    "\n",
+    "    running_loss = 0.0\n",
     "\n",
     "    for i, sample in enumerate(loader_iterable):\n",
     "        X_batch, Y_batch = sample['trace'], sample['label_idx']\n",
     "        X_batch, Y_batch = X_batch.to(device), Y_batch.to(device)\n",
     "        Y_pred = model(X_batch)\n",
-    "        # print(Y_pred.shape)\n",
+    "\n",
     "        loss = criterion(Y_pred, Y_batch)\n",
+    "        running_loss += loss\n",
     "        \n",
     "        if (i % print_every) == 0:\n",
     "            print(\"Loss at iteration {}: {}\".format(i, loss))\n",
@@ -869,13 +838,40 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "    # TODO: solve the verbosity issue.\n",
-    "    return curr_epoch < n_epochs"
+    "    mean_loss = running_loss / len(loader_iterable)\n",
+    "    return mean_loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate_epoch(loader, model, criterion, device, print_every=10):\n",
+    "    \"\"\"Validates the trained model\"\"\"\n",
+    "    model.eval()\n",
+    "    loader_iterable = tqdm(loader)\n",
+    "    running_loss = 0.0\n",
+    "\n",
+    "    for i, sample in enumerate(loader_iterable):\n",
+    "        X_batch, Y_batch = sample['trace'], sample['label_idx']\n",
+    "        X_batch, Y_batch = X_batch.to(device), Y_batch.to(device)\n",
+    "        Y_pred = model(X_batch)\n",
+    "\n",
+    "        loss = criterion(Y_pred, Y_batch)\n",
+    "        running_loss += loss\n",
+    "\n",
+    "        if (i % print_every) == 0:\n",
+    "            print(\"Loss at iteration {}: {}\".format(i, loss))\n",
+    "\n",
+    "    mean_loss = running_loss / len(loader_iterable)\n",
+    "    return mean_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -911,12 +907,39 @@
       "Loss at iteration 50: 1.7084524631500244\n",
       "Loss at iteration 60: 1.2866840362548828\n",
       "Loss at iteration 70: 1.4582889080047607\n",
-      "Loss at iteration 80: 1.50954270362854\n"
+      "Loss at iteration 80: 1.50954270362854\n",
+      "Loss at iteration 90: 1.62211275100708\n",
+      "Loss at iteration 100: 1.3946261405944824\n",
+      "Loss at iteration 110: 1.3533927202224731\n",
+      "Loss at iteration 120: 0.8093207478523254\n",
+      "Loss at iteration 130: 3.0663821697235107\n",
+      "Loss at iteration 140: 1.6188350915908813\n",
+      "Loss at iteration 150: 1.7036327123641968\n",
+      "Loss at iteration 160: 1.976090669631958\n",
+      "Loss at iteration 170: 1.590487003326416\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-92-3873663e0879>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_epoch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_epochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-91-409721b7ce04>\u001b[0m in \u001b[0;36mtrain_epoch\u001b[0;34m(loader, model, criterion, optimizer, device, curr_epoch, n_epochs, print_every)\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;31m# TODO: solve the verbosity issue.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/torch/optim/adam.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m    105\u001b[0m                 \u001b[0mstep_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgroup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'lr'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mbias_correction1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 107\u001b[0;31m                 \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddcdiv_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mstep_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexp_avg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdenom\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "train_epoch(train_loader, model, criterion, optimizer, device, 0, n_epochs)"
+    "for epoch in n_epochs:\n",
+    "    print(\"Epoch [{} / {}]\".format(epoch+1, n_epochs))\n",
+    "    print(\"Training...\")\n",
+    "    train_epoch(train_loader, model, criterion, optimizer, device)\n",
+    "    print(\"Validating...\")\n",
+    "    validate_epoch(test_loader, model, criterion, device)"
    ]
   },
   {
